--- a/templete/core/index.html
+++ b/templete/core/index.html
@@ -9,7 +9,7 @@
 
             <div class="outlet-text">
                 <br>
-                <h1>Your Data <br>Our Analysis!</h1>
+                <h1>Your Data <br>Our <button type="submit" class="Analysis-btn">Analysis!</button></h1>
                 <h3>100% Automatically and Free</h3>
             </div>
 
@@ -17,7 +17,7 @@
 
         <div class="col-md-6 upload-outlet">
             <div class="input-div">
-                <input class="input" name="file" type="file">
+                <input class="input uploaddata" name="file" type="file" onchange="showCheckedSign(this)" required>
                 <svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" stroke-linejoin="round"
                     stroke-linecap="round" viewBox="0 0 24 24" stroke-width="2" fill="none" stroke="currentColor"
                     class="icon">
@@ -26,6 +26,22 @@
                     <path d="M20.39 18.39A5 5 0 0 0 18 9h-1.26A8 8 0 1 0 3 16.3"></path>
                     <polyline points="16 16 12 12 8 16"></polyline>
                 </svg>
+                <script>
+                    function showCheckedSign(input) {
+                        if (input.files && input.files[0]) {
+                            var reader = new FileReader();
+                            reader.onload = function(e) {
+                                document.documentElement.style.setProperty('--upload-color', 'rgb(89, 194, 255)');
+                                var iconElement = document.querySelector('.upload-alert');
+                                var analysisElement = document.querySelector('.Analysis-btn');
+                                iconElement.style.color = "rgb(89, 194, 255)";
+                                analysisElement.style.color = "rgb(89, 194, 255)";
+                                analysisElement.textContent = "Submit";
+                            }
+                            reader.readAsDataURL(input.files[0]);
+                        }
+                    }
+                </script>
             </div>
             <div class="upload-alert">
                 <div>
