--- a/templete/core/analysis.html
+++ b/templete/core/analysis.html
@@ -2,25 +2,29 @@
 {% load static %}
 
 {% block content %}
-
-    <div class="col-md-12" style="display: flex;align-items: center;justify-content: center;">
-        <img style="object-fit: contain;width: min-content;" src="../../static/assets/temp/graph.png" alt="">
+<div class="container">
+    <div class="row">
+        <div class="outlet-text">
+            <br>
+            <h1>Your {{contactMod.choosenoption}} <br>chats Analysis!!</h1>
+            <h3>Most Active Member :- {{ top_user }}</h3>
+        </div>
+        <div class="col-md-12 d-flex justify-content-center align-items-center">
+            <a href="../../static/assets/temp/graph.png"><img src="../../static/assets/temp/graph.png" alt="" style="object-fit: contain; max-width: 100%;"></a>
+        </div>
+        <div class="outlet-text">
+            <h5>The graph illustrates the message distribution among users, with each bar representing an individual's message count.</h5>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="col-md-12 d-flex justify-content-center align-items-center">
+                    <a href="../../static/assets/temp/time.png"><img src="../../static/assets/temp/graph.png" alt="" style="object-fit: contain; max-width: 100%;"></a>
+                </div>
+            </div>
+            <div class="col-md-4"></div>
+            <div class="col-md-4"></div>
+        </div>
     </div>
+</div>
 
 {% endblock content %}
-
-df = pd.read_csv('static/assets/temp/data.csv')
-            message_counts = df.groupby("Sender")["Message"].count().sort_values(ascending=False)
-            message_counts = message_counts.reset_index()
-            custom_palette = sns.color_palette("husl", len(message_counts))
-
-            # Plotting the barplot
-            plt.figure(figsize=(12, 12))
-            sns.barplot(x='Message', y='Sender', data=message_counts, palette=custom_palette, ci=None)
-            plt.xlabel('Message Counts')
-            plt.ylabel('Senders')
-            plt.legend(title='Message Counts', labels=message_counts['Message'].values)
-            plt.show()
-            plt.tight_layout()
-            plt.savefig('static/assets/temp/graph.png')
-            return redirect('core:analysis')
